Update TV display styles with new background colors for columns and dynamic class assignment

--- a/frontend/public/tv.html
+++ b/frontend/public/tv.html
@@ -80,6 +80,11 @@
           console.log(`Processing column: ${column.title}`);
           const columnElement = document.createElement('div');
           columnElement.className = 'column';
+
+          // Ajouter une classe en fonction du titre de la colonne
+          const columnClass = column.title.replace(/\s+/g, '-').toLowerCase();
+          columnElement.classList.add(columnClass);
+
           columnElement.innerHTML = `<h2>${column.title}</h2>`;
 
           const cardsContainer = document.createElement('div');
