Update API routes to use '/api' prefix and change localhost to external IP in fetch requests

--- a/frontend/public/register.html
+++ b/frontend/public/register.html
@@ -127,7 +127,7 @@
       const password = document.getElementById('password').value;
 
       try {
-        const response = await fetch('http://localhost:3000/register', {
+        const response = await fetch('http://87.106.130.160/api/register', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
