--- a/frontend/public/tv.html
+++ b/frontend/public/tv.html
@@ -53,7 +53,7 @@
 
         if (username && password) {
           try {
-            const response = await fetch('http://localhost:3000/login', {
+            const response = await fetch('http://87.106.130.160/api/login', {
               method: 'POST',
               headers: { 'Content-Type': 'application/json' },
               body: JSON.stringify({ username, password })
@@ -81,7 +81,7 @@
       const fetchColumns = async () => {
         try {
           const token = localStorage.getItem('jwt_token');
-          const response = await fetch('http://localhost:3000/api/columns', {
+          const response = await fetch('http://87.106.130.160/api/columns', {
             headers: { 'Authorization': `Bearer ${token}` }
           });
           const columns = await response.json();
@@ -101,7 +101,7 @@
       const deleteCard = async (columnId, cardId) => {
         try {
           const token = localStorage.getItem('jwt_token');
-          await fetch(`http://localhost:3000/api/cards/${cardId}`, {
+          await fetch(`http://87.106.130.160/api/cards/${cardId}`, {
             method: 'DELETE',
             headers: { 'Authorization': `Bearer ${token}` }
           });
@@ -115,7 +115,7 @@
       const updateCardStatus = async (cardId, newStatus) => {
         try {
           const token = localStorage.getItem('jwt_token');
-          const response = await fetch(`http://localhost:3000/api/cards/${cardId}`, {
+          const response = await fetch(`http://87.106.130.160/api/cards/${cardId}`, {
             method: 'PUT',
             headers: {
               'Content-Type': 'application/json',
