Refactor styles for improved layout and spacing; add footer with navigation button to management page and TV display.

--- a/frontend/public/tv.html
+++ b/frontend/public/tv.html
@@ -8,6 +8,9 @@
 </head>
 <body>
   <div id="tv-display" class="tv-display"></div>
+  <footer style="text-align: center; margin-top: 20px;">
+    <button onclick="window.location.href='/manage'">Go to Management Page</button>
+  </footer>
 
   <div id="popup-overlay" class="popup-overlay" style="display: none;">
     <div class="popup-content">
