--- a/frontend/public/tv.html
+++ b/frontend/public/tv.html
@@ -70,7 +70,7 @@
 
         if (username && password) {
           try {
-            const response = await fetch('http://87.106.130.160/api/login', {
+            const response = await fetch('http://localhost:3000/api/login', {
               method: 'POST',
               headers: { 'Content-Type': 'application/json' },
               body: JSON.stringify({ username, password })
@@ -98,7 +98,7 @@
       const fetchColumns = async () => {
         try {
           const token = localStorage.getItem('jwt_token');
-          const response = await fetch('http://87.106.130.160/api/columns', {
+          const response = await fetch('http://localhost:3000/api/columns', {
             headers: { 'Authorization': `Bearer ${token}` }
           });
           const columns = await response.json();
@@ -118,7 +118,7 @@
       const deleteCard = async () => {
         try {
           const token = localStorage.getItem('jwt_token');
-          await fetch(`http://87.106.130.160/api/cards/${cardToDelete.cardId}`, {
+          await fetch(`http://localhost:3000/api/cards/${cardToDelete.cardId}`, {
             method: 'DELETE',
             headers: { 'Authorization': `Bearer ${token}` }
           });
@@ -132,7 +132,7 @@
       const updateCardStatus = async (cardId, newStatus) => {
         try {
           const token = localStorage.getItem('jwt_token');
-          const response = await fetch(`http://87.106.130.160/api/cards/${cardId}`, {
+          const response = await fetch(`http://localhost:3000/api/cards/${cardId}`, {
             method: 'PUT',
             headers: {
               'Content-Type': 'application/json',
@@ -181,6 +181,8 @@
               deleteCardPopup.style.display = 'flex';
             });
 
+            
+
             const cardElement = document.createElement('div');
             cardElement.className = 'card';
             cardElement.innerHTML = `
@@ -188,7 +190,10 @@
               <p>${card.content}</p>
               <div class="card-footer">
                 <button class="btn-status ${card.status === 'À faire' ? 'btn-status-red' : 'btn-status-green'}"><b>${card.status || '???'}</b></button>
-                <p class="card-author">Auteur : <b>${card.author || '???'}</b></p>
+                <div>
+                  ${card.assigne !== 'Personne' ? `<p class="card-author">Assigné à : <b>${card.assigne}</b></p>` : ''}
+                  <p class="card-author">Auteur : <b>${card.author || '???'}</b></p>
+                </div>
               </div>
             `;
 
@@ -253,12 +258,12 @@
       });
 
       fetchColumns();
-      setInterval(fetchColumns, 10000);
+      setInterval(fetchColumns, 50000);
 
-      // Refresh the page every 20 minutes (1200000 milliseconds)
+      // Refresh the page every 10 minutes (1200000 milliseconds)
       setInterval(() => {
         location.reload();
-      }, 1200000);
+      }, 600000);
     })();
   </script>
 </body>
