--- a/frontend/public/tv.html
+++ b/frontend/public/tv.html
@@ -70,7 +70,7 @@
 
         if (username && password) {
           try {
-            const response = await fetch('http://localhost:3000/api/login', {
+            const response = await fetch('http://192.168.1.64:3000/api/login', {
               method: 'POST',
               headers: { 'Content-Type': 'application/json' },
               body: JSON.stringify({ username, password })
@@ -98,7 +98,7 @@
       const fetchColumns = async () => {
         try {
           const token = localStorage.getItem('jwt_token');
-          const response = await fetch('http://localhost:3000/api/columns', {
+          const response = await fetch('http://192.168.1.64:3000/api/columns', {
             headers: { 'Authorization': `Bearer ${token}` }
           });
           const columns = await response.json();
@@ -118,7 +118,7 @@
       const deleteCard = async () => {
         try {
           const token = localStorage.getItem('jwt_token');
-          await fetch(`http://localhost:3000/api/cards/${cardToDelete.cardId}`, {
+          await fetch(`http://192.168.1.64:3000/api/cards/${cardToDelete.cardId}`, {
             method: 'DELETE',
             headers: { 'Authorization': `Bearer ${token}` }
           });
@@ -132,7 +132,7 @@
       const updateCardStatus = async (cardId, newStatus) => {
         try {
           const token = localStorage.getItem('jwt_token');
-          const response = await fetch(`http://localhost:3000/api/cards/${cardId}`, {
+          const response = await fetch(`http://192.168.1.64:3000/api/cards/${cardId}`, {
             method: 'PUT',
             headers: {
               'Content-Type': 'application/json',
@@ -152,6 +152,25 @@
         }
       };
 
+      const priorityColors = {
+        1: '#D4EDDA',
+        2: '#A9DFBF',
+        3: '#F9E79F',
+        4: '#F5CBA7',
+        5: '#F1948A'
+      };
+
+      const columnColors = {
+        'prepa-commande': '#B3E5FC', // Bleu pastel
+        'stock': '#C8E6C9', // Vert pastel
+        'inter': '#FFF9C4', // Jaune pastel
+        'rappel': '#fb8787' // Rose pastel
+      };
+
+      const sortCards = (cards) => {
+        return cards.sort((a, b) => b.priority - a.priority);
+      };
+
       const updateUI = (columns) => {
         console.log('Updating UI...');
         tvDisplay.innerHTML = ''; // Réinitialise l'affichage
@@ -159,16 +178,26 @@
           console.log(`Processing column: ${column.title}`);
           const columnElement = document.createElement('div');
           columnElement.className = 'column';
+          columnElement.style.backgroundColor = 'white'; // Set column background to white
 
           const columnClass = column.title.replace(/\s+/g, '-').toLowerCase();
           columnElement.classList.add(columnClass);
+          columnElement.style.border = `7px solid ${columnColors[columnClass] || '#ccc'}`; // Set column border color
 
-          columnElement.innerHTML = `<h2>${column.title}</h2>`;
+          const titleElement = document.createElement('h2');
+          titleElement.innerText = column.title;
+          titleElement.style.backgroundColor = columnColors[columnClass] || '#ccc'; // Set title background color
+          titleElement.style.borderRadius = '20px'; // Make the background oblong
+          titleElement.style.padding = '10px'; // Add padding to the title
+          titleElement.style.color = 'black'; // Set title text color to white
+
+          columnElement.appendChild(titleElement);
 
           const cardsContainer = document.createElement('div');
           cardsContainer.className = 'cards';
 
-          column.cards.forEach(card => {
+          const sortedCards = sortCards(column.cards);
+          sortedCards.forEach(card => {
             console.log(`Processing card: ${card.title}`);
             const cardContainer = document.createElement('div');
             cardContainer.className = 'card-container';
@@ -183,6 +212,7 @@
 
             const cardElement = document.createElement('div');
             cardElement.className = 'card';
+            cardElement.style.backgroundColor = priorityColors[card.priority];
             cardElement.innerHTML = `
               <h4 class="card-title">${card.title}</h4>
               <p>${card.content}</p>
