Change HTML language to French and add meta tag to prevent Google Translate; update button labels in ArchivedPanel for localization

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="icons/icon-192x192.png"/>
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="google" content="notranslate" /> <!-- Prevent Google Translate -->
     <link rel="apple-touch-icon" href="icons/icon-192x192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
